nginx1-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: nginx1
  name: nginx1
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: nginx1
    spec:
      containers:
      - image: nginx
        name: nginx1
        resources: {}
status: {}
