nginx2-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: nginx2
  name: nginx2
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: nginx2
    spec:
      containers:
      - image: nginx
        name: nginx2
        resources: {}
status: {}
