nginx-svc-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx1
