nginx-svc-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx2
