mn-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: mn-ingress
spec:
  tls:
  - secretName: nginx-1-secret
  - secretName: nginx-2-secret
  rules:
  - host: nginx1.munna.com
    http:
      paths:
      - backend:
          serviceName: nginx-svc-1
          servicePort: 80
#        path: /app1


  - host: nginx2.munna.com
    http:
      paths:
      - backend:
          serviceName: nginx-svc-2
          servicePort: 80
